--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <body style="background-color:black;">
 <h1 style="border: 2px solid DodgerBlue;"><font color="white">List of webOS Homebrew Channel Repositories</font></h1>
 
+ <title>List of Homebrew Channel App Repos</title>
+  <favicon>webicon.png</favicon>
 <p style="background-color:rgb(
 0
 , 
