--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <a href="https://pastebin.com/raw/WUNXQcd9"><font color="white">https://pastebin.com/raw/WUNXQcd9</font></a> - It has 11 apps.<p>
 <a href="https://raw.githubusercontent.com/webosbrew/docs/main/test/repo.json"><font color="white">https://raw.githubusercontent.com/webosbrew/docs/main/test/repo.json</font></a> - It has 4 apps.<p>
 <a href="https://tinyurl.com/lg-tiktok"><font color="white">https://tinyurl.com/lg-tiktok</font></a> - It has and app named TikTok with extended functions.<p>
+<a href="https://itsrealm12c.github.io/launchingapps/"><font color="white">https://itsrealm12c.github.io/launchingapps/</font></a> - It has dozens of apps.<p>
 <p style="background-color:rgb(
 0
 , 
